--- a/app/views/post_images/show.html.erb
+++ b/app/views/post_images/show.html.erb
@@ -18,9 +18,22 @@
   <% @post_image.post_comments.each do |post_comment| %>
     <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-    <% if post_comment.user == cuurent_user %>
-      <%= link_to "削除", post_immage_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
+    <% if post_comment.user == current_user %>
+      <%= link_to "削除", post_image_post_comment_path(post_comment.post_image, post_comment), method: :delete %>
     <% end %>
+  <% end %>
+  <% if @post_image.favorited_by?(current_user) %>
+    <p>
+      <%= link_to post_image_favorite_path(@post_image), method: :delete do %>
+        ♥<%= @post_image.favorites.count %>いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to post_image_favorite_path(@post_image), method: :post do %>
+        ♡<%= @post_image.favorites.count %> いいね
+        <% end %>
+    </p>
   <% end %>
 </div>
 
